[tool.poetry]
name = "dapr-multi-level-cache"
version = "0.1.0"
description = ""
authors = ["Michał Klich <michal@klichx.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
httpx = "^0.27.0"
uvicorn = {extras = ["standard"], version = "^0.27.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
